# Projeto---Chill_Chat

./: .gitignore  README.md  pyproject.toml
back_end/: Procfile  package-lock.json  package.json  requirements.txt
back_end/back_end/: settings.py  urls.py
back_end/users/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
back_end/users/migrations/: 0001_initial.py  0002_post.py  0003_userprofile_birth_date_userprofile_full_name_and_more.py  0004_post_image_post_video_alter_post_content.py  0005_follow.py  0006_comment_like.py
front_end/life-chat/: package-lock.json  package.json  tailwind.config.mjs  tsconfig.json
front_end/life-chat/public/: index.html
front_end/life-chat/src/: App.tsx  EyeIcons.tsx  index.tsx
front_end/life-chat/src/Main/: index.tsx
front_end/life-chat/src/components/BarraLateral/: index.tsx
front_end/life-chat/src/components/BarraLateralDireita/: index.tsx
front_end/life-chat/src/components/Botao/: index.tsx
front_end/life-chat/src/components/BotaoLike/: index.tsx
front_end/life-chat/src/components/Configure/: index.tsx
front_end/life-chat/src/components/Login/: index.tsx
front_end/life-chat/src/components/Modal/: index.tsx
front_end/life-chat/src/context/: AutContext.tsx
front_end/life-chat/src/page/: Home.tsx  Messages.tsx  PaginaInicial.tsx  Perfil.tsx  Profile.tsx  Reels.tsx  Search.tsx
front_end/life-chat/src/routes/: PrivateRoutes.tsx  routes.tsx
front_end/life-chat/src/services/: api.ts  authServices.ts  profileServices.ts
front_end/life-chat/src/styles/: global.css
(+4 files in other folders)
