[project]
name = "life-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "cloudinary>=1.44.1",
    "dj-database-url>=3.1.2",
    "django>=6.0.1",
    "django-cloudinary-storage>=0.3.0",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "gunicorn>=25.1.0",
    "markdown>=3.10.1",
    "pillow>=12.1.0",
    "psycopg2-binary>=2.9.11",
    "ruff>=0.14.14",
    "whitenoise>=6.11.0",
]
